Refactor to allow multiple TFC biome sources, rename current biome source to legacy, refactors to extensions and river interfaces. Introduce region biome source and generator system.